--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Jay Caldwell - Writing Portfolio</h1>
-        <p>Welcome to my portfolio. Here, you’ll find 3 blog posts I wrote. The first 2 are for an AI startup, and the third is for an ad tech company.</p>
+        <p>Welcome to my portfolio. Below are three blog posts I wrote for Vapi (AI startup) and Simpli.fi (ad tech company).</p>
     </header>
     
     <section id="works">
