--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Jay Caldwell - Writing Portfolio</h1>
-        <p>Welcome! Below are blog posts I wrote for Vapi (AI startup) and Simpli.fi (ad tech company).</p>
+        <p>Welcome! The writing samples below are blog posts I wrote for Vapi (AI startup) and Simpli.fi (ad tech company).</p>
     </header>
     
     <section id="works">
