--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
+ <header>
     <h1>Jay Caldwell - Portfolio</h1>
     <p>Welcome! The writing samples below are blog posts I wrote for Vapi (AI startup) and Simpli.fi (ad tech company). LinkedIn profile: https://www.linkedin.com/in/jay-caldwell-61384478/</p>
-    <a href="https://www.linkedin.com/in/jay-caldwell-61384478/">Jay's LinkedIn Profile</a>
+    <div style="text-align: left;">
+        <a href="https://www.linkedin.com/in/jay-caldwell-61384478/">Jay's LinkedIn Profile</a>
+    </div>
+    <br>
+    <div style="text-align: right;">
+        <a href="https://github.com/jscaldwell55">Jay's GitHub</a>
+    </div>
 </header>
     
    <section id="works">
