--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <h1>Jay Caldwell - Portfolio</h1>
-    <p>Welcome! The writing samples below are blog posts I wrote for Vapi (AI startup) and Simpli.fi (ad tech company)./</p>
+    <p>Welcome! The writing samples below are blog posts I wrote for Vapi (AI startup) and Simpli.fi (ad tech company).</p>
     <a href="https://www.linkedin.com/in/jay-caldwell-61384478/">Jay's LinkedIn Profile</a>
     <br>
     <br>
